--- a/CapaPresentacion/Reportes/R_Inventario.rdlc
+++ b/CapaPresentacion/Reportes/R_Inventario.rdlc
@@ -6,28 +6,28 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.46812cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>2.5cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.30591cm</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>1.29174cm</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>1.23cm</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>2.25299cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>2.5cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>2.5cm</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>2.5cm</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>2.5cm</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>1.75917cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -581,7 +581,7 @@
         <Top>0.77542cm</Top>
         <Left>0.45203cm</Left>
         <Height>1.2cm</Height>
-        <Width>20cm</Width>
+        <Width>14.30793cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -595,7 +595,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>Observaciones</Value>
+                <Value>Observaciones: </Value>
                 <Style>
                   <FontWeight>Bold</FontWeight>
                 </Style>
@@ -608,7 +608,7 @@
         <Top>3.29819cm</Top>
         <Left>0.44662cm</Left>
         <Height>1.60542cm</Height>
-        <Width>19.75083cm</Width>
+        <Width>14.31333cm</Width>
         <ZIndex>1</ZIndex>
         <Style>
           <Border>
@@ -625,7 +625,7 @@
     <Height>2in</Height>
     <Style />
   </Body>
-  <Width>8.05198in</Width>
+  <Width>7.10406in</Width>
   <Page>
     <PageHeader>
       <Height>2.95203cm</Height>
@@ -639,7 +639,7 @@
           <Top>0.3937cm</Top>
           <Left>0.44662cm</Left>
           <Height>2.05562cm</Height>
-          <Width>2.50542cm</Width>
+          <Width>2.64653cm</Width>
           <Style>
             <Border>
               <Style>None</Style>
@@ -674,9 +674,9 @@
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
           <Top>1.84932cm</Top>
-          <Left>3.12842cm</Left>
+          <Left>3.12843cm</Left>
           <Height>0.6cm</Height>
-          <Width>6.945cm</Width>
+          <Width>7.37235cm</Width>
           <ZIndex>1</ZIndex>
           <Style>
             <Border>
@@ -736,9 +736,9 @@
           </Paragraphs>
           <rd:DefaultName>Textbox3</rd:DefaultName>
           <Top>1.84932cm</Top>
-          <Left>13.17717cm</Left>
+          <Left>13.03606cm</Left>
           <Height>0.6cm</Height>
-          <Width>2.97625cm</Width>
+          <Width>3.46132cm</Width>
           <ZIndex>3</ZIndex>
           <Style>
             <Border>
