--- a/CapaPresentacion/Reportes/R_CambioDotacion.rdlc
+++ b/CapaPresentacion/Reportes/R_CambioDotacion.rdlc
@@ -19,10 +19,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox12</rd:DefaultName>
-        <Top>0.53729cm</Top>
-        <Left>0.86995cm</Left>
-        <Height>0.89104cm</Height>
-        <Width>13.37438cm</Width>
+        <Top>0.10583cm</Top>
+        <Left>0.3175cm</Left>
+        <Height>1.50771cm</Height>
+        <Width>17.18847cm</Width>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -709,7 +709,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value />
+                  <Value>=First(Fields!CodigoFormulario.Value, "DataCambioDotacion")</Value>
                   <Style />
                 </TextRun>
               </TextRuns>
@@ -1028,6 +1028,10 @@
           <DataField>NombrePuesto</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
+        <Field Name="Codigo">
+          <DataField>Codigo</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
         <Field Name="NombreProducto">
           <DataField>NombreProducto</DataField>
           <rd:TypeName>System.String</rd:TypeName>
@@ -1055,6 +1059,10 @@
         <Field Name="Fecha">
           <DataField>Fecha</DataField>
           <rd:TypeName>System.DateTime</rd:TypeName>
+        </Field>
+        <Field Name="CodigoFormulario">
+          <DataField>CodigoFormulario</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
